# your-hi-engine

./: .env  .gitignore  GITHUB_UPLOAD_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MULTI_LANGUAGE_GUIDE.md  MULTI_LANGUAGE_IMPLEMENTATION.md  PROJECT_STRUCTURE.md  README.md  REALTIME_AUDIT_REPORT.md  REALTIME_CHAT_DOCS.md  REALTIME_SYSTEM_ARCHITECTURE.md  TEST_REALTIME_SYSTEM.md  TRANSLATION_GUIDE_COMPLETE.md  TRANSLATION_IMPLEMENTATION_STATUS.md  TRANSLATION_SUMMARY.md  index.html  package-lock.json  package.json  tailwind.config.ts  translation-keys-en.json  translation-keys-hr.json  update_user_script.js  vite.config.ts
Developmentteam/.claude/: settings.local.json
Developmentteam/crypto_dev_team/: README.md  feature_documentation.md  pyproject.toml
Developmentteam/crypto_dev_team/src/crypto_dev_team/: crew.py  main.py
Developmentteam/crypto_dev_team/src/crypto_dev_team/config/: agents.yaml  tasks.yaml
Developmentteam/crypto_dev_team/supabase/migrations/: 20251218120000_blockchain_balance_service_core.sql  20251218120001_blockchain_balance_service_rls.sql  20251218120002_blockchain_balance_service_seed_data.sql  20251218120003_blockchain_balance_service_functions.sql  20251218120004_blockchain_balance_service_triggers.sql
docs/: BANKING_SYSTEM_DOCUMENTATION.md
src/: App.css  App.tsx  index.css  main.tsx
src/components/: AppHeader.tsx  CryptoPriceFeed.tsx  DepositWalletCard.tsx  EthPriceChart.tsx  EthStakingBoard.tsx  FinchPayWidget.tsx  GeoBlock.tsx  HDWalletAddresses.tsx  LanguageSelector.tsx  Layout.tsx  PasswordResetWithPrivateKey.tsx  (+12 more)
supabase/: config.toml
(+353 files in other folders)
