[project]
name = "crypto_dev_team"
version = "0.1.0"
description = "crypto-dev-team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=1.3.0",
    "crewai[anthropic,tools]==1.3.0",
]

[project.scripts]
crypto_dev_team = "crypto_dev_team.main:run"
run_crew = "crypto_dev_team.main:run"
train = "crypto_dev_team.main:train"
replay = "crypto_dev_team.main:replay"
test = "crypto_dev_team.main:test"
run_with_trigger = "crypto_dev_team.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
